src/main/java/com/example/stream/quarkus/registry/model/error/AddressDeleteOk.java
package com.example.stream.quarkus.registry.model.error;

public record AddressDeleteOk() implements AddressSuccess {
}
